--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "express": "^4.17.3",
     "node-xlsx": "^0.21.0",
     "read-excel-file": "^5.2.26",
     "xlsx": "^0.18.0"
